--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   server:
     container_name: server 
@@ -17,5 +16,35 @@ services:
     volumes:
       - server-data:/app/data
 
+  keria:
+    image: ${KERIA_IMAGE:-weboftrust/keria}:${KERIA_IMAGE_TAG:-0.2.0-dev3}
+    environment:
+      - KERI_AGENT_CORS=1
+      - KERI_URL=http://keria:3902
+      - PYTHONUNBUFFERED=1
+      - PYTHONIOENCODING=UTF-8
+    volumes:
+      - ./config/keria.json:/keria/config/keri/cf/keria.json
+    entrypoint:
+      [
+       'keria',
+       'start',
+       '--config-dir',
+       '/keria/config',
+       '--config-file',
+       'keria',
+       '--name',
+       'agent',
+      ]
+    healthcheck:
+      test: ['CMD', 'wget', '--spider', 'http://keria:3902/spec.yaml']
+      interval: 2s
+      timeout: 3s
+      retries: 5
+      start_period: 2s
+    ports:
+      - 3901:3901
+      - 3902:3902
+      - 3903:3903
 volumes:
   server-data:
