--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 services:
   server:
     container_name: server 
+    image: guildone/t10n-signify
     build:
+      platforms:
+        - "linux/amd64"
+        - "linux/arm64"
       context: .
       dockerfile: ./packages/server/Dockerfile
     restart: unless-stopped
